Fixed toggle nav on mobile

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,7 +1,7 @@
-div.container {
+.container {
     padding-bottom: 5%;
     padding-top: 5%;
 }
-navbar {
-    padding-bottom: 50%;
+.dropdown-backdrop {
+    position: static;
 }
